--- a/languages/rus.json
+++ b/languages/rus.json
@@ -3,7 +3,7 @@
     "2":"Используй .lang # чтобы изменить язык: ",
     "3":"Мое путешествие",
     "4":"Полный список команд:",
-    "5":"**.lang #** - поможет поменять язык на другой \n**.create_hero #** - создаст героя с # именем\n**.kick_hero #** - выгнать героя с # именем из группы\n**.stats** or **.full_stats** - посмотреть статы героев\n**.colors** - чтобы увидеть все цвета\n**.whereami** - узнать свою локацию\n**.go_to** - изменить локацию",
+    "5":"**.lang #** - поможет поменять язык на другой \n**.create_hero #** - создаст героя с # именем\n**.kick_hero #** - выгнать героя с # именем из группы\n**.stats** or **.fstats** - посмотреть статы героев\n**.colors** - чтобы увидеть все цвета\n**.whereami** - узнать свою локацию\n**.go_to** - изменить локацию",
     "6":"Язык успешно изменен!",
     "7":"Прежде всего нужно сделать Героя\nИспользуй **.create_hero** если готов\n**#** означает будущее имя\nНапример *.create_hero Sir_Pussy*\nУчти, Герой должен быть уникальным и символы типа . @ # / запрещены" ,
     "8":"Какое прекрасное имя - ",
